unpackaged/main/default/objects/Onboarding_Skills__c/Onboarding_Skills__c.object-meta.xml
<CustomObject>
    <label>Onboarding Skill</label>
    <nameField>
        <displayFormat>OBSK-{00000000}</displayFormat>
        <label>Onboarding Skills Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Onboarding Skills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>