unpackaged/main/default/objects/Onboarding_Skills__c/fields/EffectiveEndDate__c.field-meta.xml
<CustomField>
    <fullName>EffectiveEndDate__c</fullName>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>