unpackaged/main/default/objects/Onboarding_Skills__c/fields/EffectiveStartDate__c.field-meta.xml
<CustomField>
    <fullName>EffectiveStartDate__c</fullName>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>