unpackaged/main/default/objects/Onboarding_Skills__c/fields/On_Off_Boarding__c.field-meta.xml
<CustomField>
    <fullName>On_Off_Boarding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>On/Off Boarding</label>
    <referenceTo>On_Off_Boarding__c</referenceTo>
    <relationshipLabel>Onboarding Skills</relationshipLabel>
    <relationshipName>Onboarding_Skills</relationshipName>
    <type>Lookup</type>
</CustomField>