unpackaged/main/default/objects/Onboarding_Skills__c/fields/Skill__c.field-meta.xml
<CustomField>
    <fullName>Skill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Skill</label>
    <referenceTo>ProfileSkill</referenceTo>
    <relationshipLabel>Onboarding Skills</relationshipLabel>
    <relationshipName>Onboarding_Skills</relationshipName>
    <type>Lookup</type>
</CustomField>