unpackaged/main/default/objects/Onboarding_Skills__c/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Skills</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipLabel>Onboarding Skills</relationshipLabel>
    <relationshipName>Onboarding_Skills</relationshipName>
    <type>Lookup</type>
</CustomField>